Added horror bgm to the background

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
       <source src="assets/sound/bat.ogg" />
     </audio>
     <audio id="walkSound" src="assets/sound/walking.mp3" preload="auto"></audio>
+    <audio id="bgm" src="assets/sound/horror.mp3" preload="auto"></audio>
     <script src="assets/js/three.min.js"></script>
     <script src="assets/js/Demonixis.Input.js"></script>
     <script src="assets/js/Demonixis.Minimap.js"></script>
